--- a/mlpackage/python36/requirements.txt
+++ b/mlpackage/python36/requirements.txt
@@ -1,6 +1,8 @@
 numpy==1.15.4
 pandas==0.23.4
 scikit-learn==0.20.2
+tensorflow-gpu==1.12.0
+keras==2.2.4
 requests==2.21.0
 lightgbm==2.2.2
 geneticpy==1.0.0
