fixed python env variable

--- a/mlpackage/python36/Dockerfile
+++ b/mlpackage/python36/Dockerfile
@@ -32,5 +32,5 @@ WORKDIR /notebooks
 
 EXPOSE 8888
 
-RUN ${PYTHON} -m ipykernel.kernelspec
+RUN python -m ipykernel.kernelspec
 CMD ["bash", "-c", "source /etc/bash.bashrc && jupyter notebook --notebook-dir=/notebooks --ip 0.0.0.0 --no-browser --allow-root"]
